0.2dev: Fix wrong position of bookmark menu item in ctxtnav
Fixes #12689.


git-svn-id: https://trac-hacks.org/svn@16231 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/bookmarkplugin/trunk/tracbookmark/htdocs/css/tracbookmark.css
+++ b/bookmarkplugin/trunk/tracbookmark/htdocs/css/tracbookmark.css
@@ -1,5 +1,5 @@
 #ctxtnav #bookmark_menu {
-    *position: relative;
+    position: relative;
 }
 #ctxtnav #bookmark_menu > ul {
     display: none;
